--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="refresh" content="0;url=views/index.html">
 <title>Page</title>
 <script language="javascript">
-    window.location.href = "views/index.html"
+    window.location.href = "views/default-template/index.html"
 </script>
 </head>
 <body>
